# solana-security-template

./: .gitignore  Anchor.toml  Cargo.toml  README.md  Trident.toml
.github/workflows/: ci.yml
programs/account-close/: README.md
programs/account-close/src/: lib.rs  vulnerable.rs
programs/account-griefing/: Cargo.toml  README.md
programs/account-griefing/src/: error.rs  lib.rs  secure.rs  state.rs  vulnerable.rs
programs/account-reloading/: README.md
programs/account-type-mismatch/: README.md
programs/account-type-mismatch/src/: lib.rs  vulnerable.rs
programs/amm/: README.md
programs/arithmetic-overflow/: README.md
programs/arithmetic-overflow/src/: lib.rs  vulnerable.rs
programs/authority-transfer/: README.md
programs/duplicate-accounts/: README.md
programs/insecure-init/: README.md
programs/multisig-payer/: Cargo.toml  README.md
programs/multisig-payer/src/: lib.rs  (+4 more)
programs/owner-check/: README.md
programs/p-escrow/: README.md
programs/pda-security/: README.md
programs/remaining-accounts/: README.md
programs/signer-authorization/: Cargo.toml  README.md  keypair.json
programs/signer-authorization/src/: error.rs  initialize.rs  insecure.rs  lib.rs  secure.rs  state.rs  vulnerable.rs
tests/: Cargo.toml  account_close.rs  account_griefing.rs  account_type_mismatch.rs  arithmetic_overflow.rs  multisig_payer.rs  owner_check.rs  p_escrow.rs  pda_seeds.rs  signer_authorization.rs
tests/src/: common.rs  lib.rs  signer_authorization.rs
trident-tests/: Cargo.toml  README.md
trident-tests/fuzz_targets/: Cargo.toml  fuzz_arithmetic.rs
(+5 files in other folders)
