[package]
name = "signer-authorization"
version = "0.1.0"
description = "Demonstrates missing signer authorization vulnerability"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "signer_authorization"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"

[dev-dependencies]
litesvm = "0.6.1"
solana-sdk = "2.0"
